--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-browserify": "1.1.13",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -27,13 +28,21 @@
     "ember-cli-jshint": "^2.0.1",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "6.0.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-concurrency": "0.7.17",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-leaflet": "3.0.9",
+    "ember-light-table": "1.8.1",
     "ember-load-initializers": "^0.5.1",
+    "ember-paper": "1.0.0-alpha.14",
     "ember-resolver": "^2.0.3",
+    "ember-responsive": "2.0.1",
+    "ember-route-action-helper": "2.0.1",
+    "ember-socrata": "0.3.3",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   },
