--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-jshint": "^2.0.1",
+    "ember-cli-moment-shim": "3.0.1",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
-    "ember-cli-sass": "6.0.0",
+    "ember-cli-sass": "^6.0.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -38,6 +39,7 @@
     "ember-leaflet": "3.0.9",
     "ember-light-table": "1.8.1",
     "ember-load-initializers": "^0.5.1",
+    "ember-moment": "7.3.0",
     "ember-paper": "1.0.0-alpha.14",
     "ember-resolver": "^2.0.3",
     "ember-responsive": "2.0.1",
