--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ember-responsive": "2.0.1",
     "ember-route-action-helper": "2.0.1",
     "ember-socrata": "0.3.3",
+    "ember-truth-helpers": "1.3.0",
     "ember-welcome-page": "^1.0.3",
     "loader.js": "^4.0.10"
   },
